JumpScript/tests/baselines/reference/multipleExportDefault3.errors.txt
tests/cases/conformance/externalModules/multipleExportDefault3.jump(1,1): error TS2528: A module cannot have multiple default exports.
tests/cases/conformance/externalModules/multipleExportDefault3.jump(5,22): error TS2528: A module cannot have multiple default exports.


==== tests/cases/conformance/externalModules/multipleExportDefault3.jump (2 errors) ====
    export default {
    ~~~~~~~~~~~~~~~~
        uhoh: "another default",
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    };
    ~~
!!! error TS2528: A module cannot have multiple default exports.
    
    export default class C { }
                         ~
!!! error TS2528: A module cannot have multiple default exports.
    
    